    define it if unset, or fall back to 'now' if build/Makefile is
    directly invoked.

  [ Steve McIntyre ]
  * Add the part_gpt module into the core grub image to make it easier
    for users doing slightly different things with our images; include
    support for GPT partition tables as well as msdos (Closes: #789600).

  [ Ben Hutchings ]
  * Include leds-modules on armhf if available

 -- Karsten Merker <merker@debian.org>  Wed, 28 Oct 2015 23:10:45 +0100

debian-installer (20151023) unstable; urgency=medium

  [ Samuel Thibault ]
  * Restore actually-used non-gtk speech synthesis entries
    - Otherwise netboot/gtk/mini.iso (which is gtk only) does not contain the
      speech entry.
    - Avoid including them on non-gtk netboot image, though.

  [ Cyril Brulebois ]
  * Bump linux kernel version from 4.1.0-2 to 4.2.0-1
  * Update translation-status for the release.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 23 Oct 2015 12:54:34 +0200

debian-installer (20150911) unstable; urgency=medium

  * Bump linux kernel version from 4.1.0-1 to 4.1.0-2
  * Update translation-status for the release.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 11 Sep 2015 00:58:26 +0200

debian-installer (20150828) unstable; urgency=medium

  [ Didier Raboud ]
  * In the syslinux menu tree:
    - Add syslinux machinery to use ifcpu64.c32 on multi-arch CDs, for CPU
      64-bit capability detection
    - Swap one-key shortcuts to let them access the graphical variants
    - Add the correct one-key shortcuts to 32-bit variant
    - Replace (32 bits) prefix mentions by the correct "32-bit" in parentheses
    - Shorten the 32-bits menu label to use the i386 Debian architecture name,
      to make the whole label short enough
    - Shorten the 32-bit Graphical automated install entry label
    - Drop unused non-gtk speech synthesis entries

  [ Samuel Thibault ]
  * Add beep to UEFI x86 boot menu (Closes: #796591).
  * Add 's' shortcut for speech to UEFI x86 boot menu.
