@@ -129,17 +129,17 @@ Build-Depends: debhelper (&gt;= 7.3.10), libdebian-installer4-dev (&gt;= 0.41),
 
 Package: kbd-chooser
 Architecture: i386 amd64 powerpc alpha hppa sparc [...]
-XC-Package-Type: udeb
+Package-Type: udeb
 Depends: ${shlibs:Depends}, ${misc:Depends}, console-keymaps
 Description: Detect a keyboard and select layout
-XB-Installer-Menu-Item: 1200
+Installer-Menu-Item: 1200
 </screen></informalexample>
 
 <para>
 
-The line <literal>XC-Package-Type</literal> tells
+The line <literal>Package-Type</literal> tells
 <classname>debhelper</classname> to treat the package as a udeb. The
-<literal>XB-Installer-Menu-Item</literal> is added in the control file for
+<literal>Installer-Menu-Item</literal> is added in the control file for
 the udeb and will eventually end up in the <classname>dpkg</classname>
 status file to help <classname>main-menu</classname> figure out that this
 udeb should be included in the menu and in what order<footnote>
