@@ -118,5 +118,5 @@ A 2 minute primer on building udebs.
 ====================================
 
 1. Add a Build-Dependency against debhelper (>= 4.2).
-2. Add "XC-Package-Type: udeb" to the package's stanza in the control file.
+2. Add "Package-Type: udeb" to the package's stanza in the control file.
 3. Build the package!
