@@ -43,6 +43,10 @@ debian-installer (20151024) UNRELEASED; urgency=medium
   [ Ben Hutchings ]
   * Include leds-modules on armhf if available
 
+  [ Martin Michlmayr ]
+  * Update docs to reflect that Package-Type and Installer-Menu-Item
+    are official fields nowadays (Closes: #807716).
+
  -- Karsten Merker <merker@debian.org>  Wed, 28 Oct 2015 23:10:45 +0100
 
 debian-installer (20151023) unstable; urgency=medium
